# AHK_scripts

./: .gitignore  .gitmodules  all_in_one_v2.ahk  left click.ahk  man_lost_job.ahk  scripts-to-compile.yml
.github/: README.md
.github/scripts/: compile-scripts.ps1  get-ahk-versions.ps1  install-ahk-v1.ps1  install-ahk-v2.ps1  install-ahk.ps1  list-compiled-files.ps1
.github/workflows/: compile-ahk.yml
IME Switch/: ime_switch.ahk
IMESwitch/: README.md  ime_switch.ahk
VirtualDesktopAccessor/: Cargo.toml  README.md  virtual_desktop.ahk
VirtualDesktopAccessor/dll/: Cargo.toml
VirtualDesktopAccessor/dll/src/: lib.rs
VirtualDesktopAccessor/exe/: virtual_desktop.ah2
VirtualDesktopAccessor/src/: comobjects.rs  events.rs  interfaces.rs  listener.rs  tests.rs
VirtualDesktopAccessor/testbin/: Cargo.toml
VirtualDesktopAccessor/testbin/src/: main.rs
keyboard_redefine/: launcher.cmd  readme.md
tools/: getkey.ahk
